docs(tomcat-monitoring): add TM-ADR-0023 and TN-006 for multi-domain diagnostic dispatcher governance
- Add TM-ADR-0023: Adopt Multi-Domain Diagnostic Dispatcher and Mandatory Per-Alert Decision Engine Governance
- Add TN-006: Implement Multi-Domain Diagnostic Dispatcher and Per-Alert Decision Engine Governance
- Update architecture narrative, decision tree matrices (TD-01..08, AH-01..05, GC-01..04, TH-01..03), and notification contracts
- Mark TASK-TM-018 as Completed in follow-up-tasks.md
- Update ADR and technical note indexes